--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "clsx": "^2.1.0",
     "lightweight-charts": "^4.1.3",
     "lucide-react": "^0.315.0",
-    "next": "14.1.0",
+    "next": "^14.2.29",
     "pixi.js": "^7.3.3",
     "primereact": "^10.5.1",
     "react": "^18",
